tests/lean/simplc_not_imported.lean.expected.out
simplc_not_imported.lean:6:0-6:12: error: unexpected identifier; expected command
