tests/lean/simplc_not_imported.lean
import Lean

/-
This should fail unless `Lean.SimpLC` is explicitly imported.
-/
simplc_check
